# egi2bids

./: README.md  mff2bids.py  pyproject.toml
.github/workflows/: build.yml  code-style.yml  publish.yml  pytest.yml
egi2bids/: __init__.py  constants.py  gui.py  mff2bids.py  mff2bids_gui.py
egi2bids/commands/: egi2bids.py  gui.py
egi2bids/tests/: test_mff2bids.py
egi2bids/utils/: _checks.py  logs.py
egi2bids/utils/tests/: test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
old/: README.md  mff2bids_gui.py  requirements.txt
